--- a/mobile/cmp/form/FormField.scss
+++ b/mobile/cmp/form/FormField.scss
@@ -41,12 +41,10 @@
 
   &__info-msg,
   &__validation-msg {
-    font-size: var(--xh-font-size-small-px);
-    line-height: calc(var(--xh-font-size-small-px) + var(--xh-pad-px));
-    color: var(--xh-text-color-muted);
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    overflow: hidden;
+    font-size: var(--xh-form-field-msg-font-size);
+    line-height: var(--xh-form-field-msg-line-height);
+    margin: var(--xh-form-field-msg-margin);
+    text-transform: var(--xh-form-field-msg-text-transform);
   }
 
   &__validation-msg {
