New severity levels for form/record validations + enhanced `FormField` styling (#4194)
* Enhanced `Field.rules` to support `warning` and `info` severity. Useful for non-blocking
  validation scenarios, such as providing guidance to users without preventing form submission.
* Removed `RecordErrorMap` + reorganized validation types (not expected to impact most apps).

✨ Styles
* Modified several CSS classes related to `FormField` to better follow BEM conventions.
    * ⚠️The commonly targeted `xh-form-field-label` class is now `xh-form-field__label`, although
      please review new CSS vars (below) and consider using those instead of class-based selectors.
    * Modifier classes now follow BEM conventions (e.g. `xh-form-field-invalid` is now
      `xh-form-field--invalid`).
* Applied the app-wide `--xh-font-family` to `input` elements. Previously these had continued to
  take a default font defined by the browser stylesheet.
    * Customize for inputs if needed via `--xh-input-font-family`.
    * Note that the switch to Hoist's default Inter font w/tabular numbers might require some
      inputs w/tight sizing to be made wider to avoid clipping (e.g. `DateInputs` sized to fit).
* Updated + added validation-related `FormField` CSS classes and variables to account for new `info`
  and `warning` validation levels. Additionally validation messages and the `info` text element no
  longer clip at a single line - they will wrap as needed.
* Added new CSS variables for `FormField` to allow easier customization of commonly adjusted styles,
  with a focus on labels. See `vars.scss` for the full list. Consider replacing existing class-based
  CSS overrides with overrides to variables where possible.
* Added new CSS variables `--xh-intent-danger-text-color` (and others). Consider using these when
  styling text with Hoist intent colors to enhance legibility in dark mode.


---------

Co-authored-by: Lee Wexler <lbwexler@xh.io>
Co-authored-by: Anselm McClain <atm@xh.io>

--- a/cmp/input/HoistInput.scss
+++ b/cmp/input/HoistInput.scss
@@ -6,9 +6,27 @@
  */
 
 .xh-input {
-  &.xh-input-invalid {
+  // Override browser user agent styles on input elements.
+  input {
+    font-family: var(--xh-input-font-family);
+    font-feature-settings: var(--xh-input-font-feature-settings);
+  }
+
+  &.xh-input--invalid {
     input {
       border: var(--xh-form-field-invalid-border);
+    }
+  }
+
+  &.xh-input--warning {
+    input {
+      border: var(--xh-form-field-warning-border);
+    }
+  }
+
+  &.xh-input--info {
+    input {
+      border: var(--xh-form-field-info-border);
     }
   }
 }
