--- a/desktop/cmp/input/SwitchInput.scss
+++ b/desktop/cmp/input/SwitchInput.scss
@@ -5,12 +5,30 @@
  * Copyright © 2026 Extremely Heavy Industries Inc.
  */
 
-.xh-switch-input.xh-input-invalid {
-  .bp6-control-indicator {
-    border: var(--xh-form-field-invalid-border);
-
-    &::before {
+.xh-switch-input {
+  &.xh-input--invalid,
+  &.xh-input--warning,
+  &.xh-input--info {
+    .bp6-control-indicator::before {
       margin: 1px;
+    }
+  }
+
+  &.xh-input--invalid {
+    .bp6-control-indicator {
+      border: var(--xh-form-field-invalid-border);
+    }
+  }
+
+  &.xh-input--warning {
+    .bp6-control-indicator {
+      border: var(--xh-form-field-warning-border);
+    }
+  }
+
+  &.xh-input--info {
+    .bp6-control-indicator {
+      border: var(--xh-form-field-info-border);
     }
   }
 }
