--- a/desktop/cmp/form/collapsiblefieldset/CollapsibleFieldSet.scss
+++ b/desktop/cmp/form/collapsiblefieldset/CollapsibleFieldSet.scss
@@ -5,7 +5,7 @@
  * Copyright © 2026 Extremely Heavy Industries Inc.
  */
 
-ul.xh-field-set-tooltip {
+ul.xh-collapsible-field-set-tooltip {
   margin: 0;
   padding: 0 1em 0 2em;
 }
