Rename CollapsibleSet -> Card + other changes from discussion w/ Anselm + Colin

--- a/desktop/cmp/form/formfieldset/FormFieldSet.scss
+++ b/desktop/cmp/form/formfieldset/FormFieldSet.scss
@@ -4,4 +4,8 @@
  *
  * Copyright © 2026 Extremely Heavy Industries Inc.
  */
-export * from './CollapsibleSet';
+
+ul.xh-form-field-set-tooltip {
+  margin: 0;
+  padding: 0 1em 0 2em;
+}
